put currency
