# events/internal/infra/docs/swagger.yaml
@@ -2,9 +2,11 @@ basePath: events
 definitions:
   application.InputRegisterEventDTO:
     properties:
+      currency:
+        type: string
       description:
         type: string
-      expirate_at:
+      event_date:
         type: string
       image_url:
         type: string
@@ -15,9 +17,11 @@ definitions:
     type: object
   application.InputUpdateEventDTO:
     properties:
+      currency:
+        type: string
       description:
         type: string
-      expirate_at:
+      event_date:
         type: string
       id:
         type: string
@@ -32,9 +36,11 @@ definitions:
     properties:
       created_at:
         type: string
+      currency:
+        type: string
       description:
         type: string
-      expirate_at:
+      event_date:
         type: string
       id:
         type: string
@@ -51,9 +57,11 @@ definitions:
     properties:
       created_at:
         type: string
+      currency:
+        type: string
       description:
         type: string
-      expirate_at:
+      event_date:
         type: string
       id:
         type: string
